--- a/personalweb.html
+++ b/personalweb.html
@@ -55,8 +55,8 @@
             <p><strong>Relevant Coursework</strong>: Data Structures, Machine Structure and Programming,
                  Programming Languages, Software Engineering, Algorithms, 
                  Computation Theory, Intro to Machine Learning, Game Design</p>
-            <p><strong>Programming Languages</strong>: Proficient: C++/C (linux/unix environment), C# (ASP.NET framework), Java;
-                Exposed to: Python, JavaScript, HTML, CSS, SQL</p>
+            <p><strong>Programming Languages</strong>: C++/C (linux/unix environment), C# (ASP.NET framework), Java, 
+                Python, JavaScript, HTML, CSS, SQL</p>
             <p><strong>Software Packages/Tools</strong>: VS Code, Atom, SQL Server Management Studio, Unity, JUnit, 
                 Chrome DevTools, Valgrind, Github, TortoiseSVN, MacOS Terminal/Command Prompt, Jupyter Notebook</p>
             
