Updated resume and styling

--- a/personalweb.html
+++ b/personalweb.html
@@ -8,30 +8,34 @@
         <script type="text/javascript" src="myjavascript.js"></script>
     </head>
     <body>
-
         <div class="header">
-          <h1>Eric Kim</h1>
+            <h1>Eric Kim</h1>
         </div>
 
         <div class="navbar">
-          <a href="#aboutme">About Me</a>
-          <a href="#portfolio">Portfolio</a>
-          <a href="#resume">Resume</a>
-          <a href="#contactme">Contact Me</a>
+            <a href="#aboutme">About Me</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#resume">Resume</a>
+            <a href="#contactme">Contact Me</a>
         </div>
 
         <div class="row">
-          <div class="side">
-          </div>
-          <div class="main" id="aboutme">
+            <div class="side"></div>
+            <div class="main" id="aboutme">
             <h2>About Me</h2>
-            <p>Photo of me:</p>
             <img class="imgofme" src="photoofme.png" alt="Photo of me">
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+            <p>
+                Hello, I'm a senior at Tufts University majoring in Computer Science and minoring in finance. 
+                I'm interested in an entry level position for software development or web development. 
+                I have coding experience in C++, C, and Java in academic settings and gained professional 
+                experience in C#, HTML, CSS, JavaScript, and SQL through my recent internship at Crestron Electronics.
+                My time at Crestron Electronics affirmed my desire to pursue a career where I can use my coding 
+                skills to help advance technology.
+            </p>
 
-        	<br>
+        	<br/>
         	<hr id="portfolio">
-        	<br>
+        	<br/>
 
             <h2>Portfolio</h2>
             <p><strong>Project</strong>: ____</p>
@@ -42,7 +46,6 @@
 
             <p><strong>Project</strong>: ____</p>
             <p><strong>Link</strong>: ______</p>
-            <p>Project ideas: flower online shopping website, ski slope directions, stock market predictor?</p>
 
         	<p><strong>Github</strong>: <a href="https://github.com/erickim0223">https://github.com/erickim0223</a></p>
 
@@ -51,16 +54,17 @@
         	<br>
 
             <h2>Resume</h2>
-        	
-            <p><strong>Relevant Coursework</strong>: Data Structures, Machine Structure and Programming,
-                 Programming Languages, Software Engineering, Algorithms, 
-                 Computation Theory, Intro to Machine Learning, Game Design</p>
-            <p><strong>Programming Languages</strong>: C++/C (linux/unix environment), C# (ASP.NET framework), Java, 
-                Python, JavaScript, HTML, CSS, SQL</p>
-            <p><strong>Software Packages/Tools</strong>: VS Code, Atom, SQL Server Management Studio, Unity, JUnit, 
-                Chrome DevTools, Valgrind, Github, TortoiseSVN, MacOS Terminal/Command Prompt, Jupyter Notebook</p>
+            <p><strong>Full Resume</strong>: 
+                <a href="Eric_Kim_BS_ComputerScience_Resume_2023_02.pdf">Eric_Kim_BS_ComputerScience_Resume_2023_02.pdf</a>
+            </p>
             
-            <p><strong>Full Resume</strong>: <a href="Resume.pdf">Resume.pdf</a></p>
+            <h2>Technical Skills</h2>
+            <p><strong>Front End Programming Languages</strong>: HTML, CSS, JavaScript</p>
+            <p><strong>Back End Programming Languages</strong>: Java, C#, C++, C, Python</p>
+            <p><strong>Frameworks and Technologies</strong>: ASP.NET, jQuery, Bootstrap, XML</p>
+            <p><strong>Databases</strong>: SQL, SQL Server Management Studio, PostgreSQL, pgAdmin</p>
+            <p><strong>Operating Systems</strong>: Unix, Linux</p>
+            <p><strong>Other Tools</strong>: Atom, JUnit, Chrome DevTools, Valgrind, TortoiseSVN, Linux Terminal</p>
 
         	<br>
         	<hr id="contactme">
@@ -72,9 +76,8 @@
             <p><strong>Phone Number</strong>: 201-249-4546</p>
             <p><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/kim-er/">https://www.linkedin.com/in/kim-er/</a></p>
 
-          </div>
-          <div class="side">
-          </div>
+            </div>
+            <div class="side"></div>
 
           </div>
 
