Updated portfolio section

--- a/personalweb.html
+++ b/personalweb.html
@@ -23,7 +23,7 @@
             <div class="side"></div>
             <div class="main" id="aboutme">
             <h2>About Me</h2>
-            <img class="imgofme" src="photoofme.png" alt="Photo of me">
+            <img class="imgofme" src="./images/photoofme.png" alt="Photo of me">
             <p>
                 Hello, I'm a senior at Tufts University majoring in Computer Science and minoring in finance. 
                 I'm interested in an entry level position for software development or web development. 
@@ -38,14 +38,15 @@
         	<br/>
 
             <h2>Portfolio</h2>
-            <p><strong>Project</strong>: Tic Tac Toe</p>
-            <p><strong>Link</strong>: <a href="tictactoe.html">Tic Tac Toe</a></p>
+            <p><strong>Project</strong>: <a href="tictactoe.html">Tic Tac Toe</a></p>
+            <p><strong>Description</strong>: Enjoy this basic game of Tic Tac Toe developed with HTML, CSS, and JavaScript
+            </p>
 
-            <p><strong>Project</strong>: Momo Flowers</p>
-            <p><strong>Link</strong>: <a href="momohome.html">Momo Flowers</a></p>
+            <p><strong>Project</strong>: <a href="momohome.html">Momo Flowers</a></p>
+            <p><strong>Description</strong>: A flower delivery shop's up and coming website, developed with HTML, CSS, and JavaScript</p>
 
             <p><strong>Project</strong>: ____</p>
-            <p><strong>Link</strong>: ______</p>
+            <p><strong>Description</strong>: ______</p>
 
         	<p><strong>Github</strong>: <a href="https://github.com/erickim0223">https://github.com/erickim0223</a></p>
 
