--- a/personalweb.html
+++ b/personalweb.html
@@ -66,7 +66,7 @@
             <center>
                 <div class="container">
                     <div class="row">
-                      <div class="col">
+                      <div class="col-xl-4">
                         <div class="myborder">
                             <h4>Programming Languages</h4>
                             <p>HTML</p>
@@ -78,7 +78,7 @@
                             <p>SQL</p>
                         </div>
                       </div>
-                      <div class="col">
+                      <div class="col-xl-4">
                         <div class="myborder">
                             <h4>Frameworks/Technologies</h4>
                             <p>jQuery</p>
@@ -88,7 +88,7 @@
                             <p>Bootstrap</p>
                       </div>
                     </div>
-                      <div class="col">
+                      <div class="col-xl-4">
                         <div class="myborder">
                             <h4>Other Tools</h4>
                             <p>PostgreSQL</p>
@@ -125,14 +125,14 @@
             </center>
                  <div class="container">
                         <div class="row">
-                          <div class="col-2 pt-5">
+                          <div class="col-md-2 col-sm-6 pt-5">
                             <h4>Phone Number</h4>
                             <p>201-249-4546</p>
                             <br/>
                             <h4>Email</h4>
                             <p>Eric.Kim@tufts.edu</p>
                           </div>
-                          <div class="col-8 offset-md-2 pt-5">
+                          <div class="col-md-8 offset-md-2 pt-5">
                             <form class="row g-3">
                                 <div class="col-md-6">
                                   <input type="name" class="form-control" id="inputEmail4" placeholder="Name">
@@ -154,7 +154,7 @@
         <div class="blockcode">
             <footer class="page-footer">
                 <center>
-                    <div class="d-flex flex-column mx-auto py-5">
+                    <div class="d-flex flex-column mx-auto py-4">
                         <h4 class="text-black">Eric Kim</h4>
                         <div class="mt-2">
                             <button type="button" class="btn btn-secondary" onclick="window.open('https://www.linkedin.com/in/kim-er/')">
