projects slide update

--- a/personalweb.html
+++ b/personalweb.html
@@ -106,17 +106,67 @@
 
         <section id="projects" class="project-slide"> 
             <h2>Projects</h2>
-            <p><strong>Project</strong>: <a href="tictactoe.html">Tic Tac Toe</a></p>
-            <p><strong>Description</strong>: Enjoy this basic game of Tic Tac Toe developed with HTML, CSS, and JavaScript
-            </p>
+            <center>
+                <figure class="figure">
+                    <img src="images/dbinterface.png" id='dbinterface' width="800px" class="figure-img p-0 m-0" alt="Database Interface">
+                    <figcaption class="figure-caption p-5 text-black">
+                        <h4>Database Interface</h4>
+                        Description
+                        <br/>
+                        <br/>
+                        <button type="button" class="btn btn-secondary" onclick="window.open('https://erick.sgedu.site/databaseinterface/interface.php')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 20">
+                            <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"></path>
+                            <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"></path>
+                            </svg> Live
+                        </button>
+                        <button type="button" class="btn btn-secondary" onclick="window.open('https://github.com/erickim0223/databaseinterface')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 20">
+                            <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"></path>
+                            </svg> Code
+                          </button>
+                    </figcaption>
+                  </figure>
+            </center>
+            <center>
+                <figure class="figure">
+                    <img src="images/personalwebsite.png" id='personalwebsite' width="800px" class="figure-img p-0 m-0" alt="Personal Website">
+                    <figcaption class="figure-caption p-5 text-black">
+                        <h4>Personal Website</h4>
+                        Description
+                        <br/>
+                        <br/>
+                        <button type="button" class="btn btn-secondary" onclick="window.open('https://github.com/erickim0223/personalwebsite')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 20">
+                            <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"></path>
+                            </svg> Code
+                          </button>
+                    </figcaption>
+                  </figure>
+            </center>
+            <center>
+                <figure class="figure">
+                    <img src="images/dbinterface.png" id='dbinterface' width="800px" class="figure-img p-0 m-0" alt="Database Interface">
+                    <figcaption class="figure-caption p-5 text-black">
+                        <h4>Database Interface</h4>
+                        Description
+                        <br/>
+                        <br/>
+                        <button type="button" class="btn btn-secondary" onclick="window.open('https://erick.sgedu.site/databaseinterface/interface.php')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 20">
+                            <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"></path>
+                            <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"></path>
+                            </svg> Live
+                        </button>
+                        <button type="button" class="btn btn-secondary" onclick="window.open('https://github.com/erickim0223/databaseinterface')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 20">
+                            <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"></path>
+                            </svg> Code
+                          </button>
+                    </figcaption>
+                  </figure>
+            </center>
 
-            <p><strong>Project</strong>: <a href="momohome.html">Momo Flowers</a></p>
-            <p><strong>Description</strong>: A flower delivery shop's up and coming website, developed with HTML, CSS, and JavaScript</p>
-
-            <p><strong>Project</strong>: ____</p>
-            <p><strong>Description</strong>: ______</p>
-
-        	<p><strong>Github</strong>: <a href="https://github.com/erickim0223">https://github.com/erickim0223</a></p>
         </section>
 
         <section id="contactme" class="contact-slide"> 
