--- a/personalweb.html
+++ b/personalweb.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css"/> 
+        <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="myjavascript.js"></script>
         <link rel="shortcut icon" type="image/x-icon" href="./images/logo.png" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -183,15 +184,21 @@
                             <p>Eric.Kim@tufts.edu</p>
                           </div>
                           <div class="col-md-8 offset-md-2 pt-5">
-                            <form class="row g-3">
+                            <form class="row g-3" action="https://erick.sgedu.site/sendemail.php" method="post" id="emailform">
                                 <div class="col-md-6">
-                                  <input type="name" class="form-control" id="inputEmail4" placeholder="Name">
+                                  <div class="input-group has-validation">
+                                    <input type="name" class="form-control" id="validationname" placeholder="Name" name="name" required>
+                                  </div>
                                 </div>
                                 <div class="col-md-6">
-                                  <input type="email" class="form-control" id="inputPassword4" placeholder="Email">
+                                    <div class="input-group has-validation">
+                                        <input type="email" class="form-control" id="validationemail" placeholder="Email" name="email" required>
+                                    </div>
                                 </div>
                                 <div class="col-12">
-                                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="7" placeholder="Message"></textarea>
+                                    <div class="input-group has-validation">
+                                        <textarea class="form-control" id="validationmessage" rows="7" placeholder="Message" name="message" required></textarea>
+                                    </div>
                                 </div>
                                 <div class="col-12">
                                   <button type="submit" class="btn btn-outline-dark">Send</button>
