email form message new page

--- a/personalweb.html
+++ b/personalweb.html
@@ -186,7 +186,7 @@
                             <p>Eric.Kim@tufts.edu</p>
                           </div>
                           <div class="col-md-8 offset-md-2 pt-5">
-                            <form class="row g-3" action="https://erick.sgedu.site/sendemail.php" method="post" id="emailform">
+                            <form class="row g-3" action="https://erick.sgedu.site/sendemail.php" method="post" id="emailform" target="_blank">
                                 <div class="col-md-6">
                                   <div class="input-group has-validation">
                                     <input type="name" class="form-control" id="validationname" placeholder="Name" name="name" required>
