--- a/personalweb.html
+++ b/personalweb.html
@@ -10,9 +10,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css"/> 
+        <link rel="stylesheet" href="scssstyle.css"/> 
     </head>
     <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top justify-content-end">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top justify-content-end text-white">
         <div class="container-fluid">
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#n_bar" aria-controls="n_bar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -36,15 +37,67 @@
             </div>
         </div>
     </nav>
+    <section id="intro" class="intro-slide">
 
-        <section id="intro" class="intro-slide">
-            <h1>
-                Hi, I'm <div class="name">Eric Kim</div>
-                <br/>
-                <p>Full Stack Developer</p>
-                <button type="button" class="btn btn-outline-light" onclick="location.replace('personalweb.html#contactme')">Contact Me</button>
-            </h1>
-        </section>
+    <div class="bubbles">
+        <h1>
+            Hi, I'm <div class="namee">Eric Kim</div>
+            <br/>
+            <p>Full Stack Developer</p>
+            <button type="button" class="btn btn-outline-light" onclick="location.replace('personalweb.html#contactme')">Contact Me</button>
+        </h1>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+      </div>
+    </section>
 
         <section id="aboutme" class="about-slide">
             <h2>About Me</h2>
@@ -61,11 +114,12 @@
                 I have a strong passion for using my coding skills to help advance technology.
             </p>
             <br/>
-            <button type="button" class="btn btn-outline-dark" onclick="location.replace('Eric_Kim_BS_ComputerScience_Resume_2023_02.pdf')">Resume</button>
+            <button type="button" class="btn btn-outline-light" onclick="location.replace('Eric_Kim_BS_ComputerScience_Resume_2023_02.pdf')">Resume</button>
         </section>
 
         <section id="skills" class="skills-slide"> 
             <h2>Skills</h2>
+            <br/>
             <center>
                 <div class="container">
                     <div class="row">
@@ -112,12 +166,13 @@
             <center>
                 <figure class="figure">
                     <img src="images/stockpredictor.png" id='stockpredictor' width="800px" class="figure-img p-0 m-0" alt="Stock Predictor">
-                    <figcaption class="figure-caption p-5 text-black">
-                        <h4>Stock Predictor</h4>
-                        Description
+                    <figcaption class="figure-caption p-5 text-white">
+                        <h4>Stock Trend Predictor</h4>
+                        A stock trend predictor for deciding whether or not to buy a stock
                         <br/>
                         <br/>
-                        <button type="button" class="btn btn-secondary" onclick="window.open('https://erickim0223-projects-app-c42gj6.streamlit.app/')">
+                        <br/>
+                        <button type="button" class="btn btn-secondary" onclick="window.open('https://erickim0223-stockpredictor-app-752ms5.streamlit.app/')">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 20">
                             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"></path>
                             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"></path>
@@ -134,9 +189,10 @@
             <center>
                 <figure class="figure">
                     <img src="images/personalwebsite.png" id='personalwebsite' width="800px" class="figure-img p-0 m-0" alt="Personal Website">
-                    <figcaption class="figure-caption p-5 text-black">
+                    <figcaption class="figure-caption p-5 text-white">
                         <h4>Personal Website</h4>
-                        Description
+                        A website for introducing me and showcasing some of my projects
+                        <br/>
                         <br/>
                         <br/>
                         <button type="button" class="btn btn-secondary" onclick="window.open('https://github.com/erickim0223/personalwebsite')">
@@ -150,9 +206,10 @@
             <center>
                 <figure class="figure">
                     <img src="images/dbinterface.png" id='dbinterface' width="800px" class="figure-img p-0 m-0" alt="Database Interface">
-                    <figcaption class="figure-caption p-5 text-black">
+                    <figcaption class="figure-caption p-5 text-white">
                         <h4>Database Interface</h4>
-                        Description
+                        A simple interface for a database holding customer and order data
+                        <br/>
                         <br/>
                         <br/>
                         <button type="button" class="btn btn-secondary" onclick="window.open('https://erick.sgedu.site/databaseinterface/interface.php')">
@@ -203,7 +260,7 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                  <button type="submit" class="btn btn-outline-dark">Send</button>
+                                  <button type="submit" class="btn btn-outline-light">Send</button>
                                 </div>
                               </form>
                             </div>
@@ -214,7 +271,7 @@
             <footer class="page-footer">
                 <center>
                     <div class="d-flex flex-column mx-auto py-4">
-                        <h4 class="text-black">Eric Kim</h4>
+                        <h4 class="text-white">Eric Kim</h4>
                         <div class="mt-2">
                             <button type="button" class="btn btn-secondary" onclick="window.open('https://www.linkedin.com/in/kim-er/')">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
