--- a/personalweb.html
+++ b/personalweb.html
@@ -100,25 +100,37 @@
     </section>
 
         <section id="aboutme" class="about-slide">
-            <h2>About Me</h2>
             <br/>
-            <p>
-                Hello, I'm Eric Kim, a senior at Tufts University majoring in Computer Science and minoring in finance. 
-            </p>
-            <br/>
-            <p>
-                I'm interested in software engineering and web development.
-            </p>
-            <br/>
-            <p>
-                I have a strong passion for using my coding skills to help advance technology.
-            </p>
-            <br/>
-            <button type="button" class="btn btn-outline-light" onclick="location.replace('Eric_Kim_BS_ComputerScience_Resume_2023_02.pdf')">Resume</button>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-10">
+                            <h2>About Me</h2>
+                            <div class="underline"></div>
+                            <br/>
+                            <p>
+                                Hello, I'm Eric Kim, a senior at Tufts University majoring in Computer Science and minoring in finance. 
+                            </p>
+                            <br/>
+                            <p>
+                                I'm interested in software engineering and web development.
+                            </p>
+                            <br/>
+                            <p>
+                                I'm open to learning new technologies and look forward to hearing from you.
+                            </p>
+                            <br/>
+                            <button type="button" class="btn btn-outline-light" onclick="location.replace('Eric_Kim_BS_ComputerScience_Resume_2023_02.pdf')">Resume</button>
+                        </div>
+                        <div class="col-xl-1">
+                            <img src="images/person.png" id="person" alt="personicon">
+                        </div>
+                    </div>
+                </div>
         </section>
 
         <section id="skills" class="skills-slide"> 
             <h2>Skills</h2>
+            <div class="underline"></div>
             <br/>
             <center>
                 <div class="container">
@@ -163,6 +175,8 @@
 
         <section id="projects" class="project-slide"> 
             <h2>Projects</h2>
+            <div class="underline"></div>
+            <br/>
             <center>
                 <figure class="figure">
                     <img src="images/stockpredictor.png" id='stockpredictor' width="800px" class="figure-img p-0 m-0" alt="Stock Predictor">
@@ -232,6 +246,7 @@
         <section id="contactme" class="contact-slide"> 
             <center>
                 <h2>Contact Me</h2>
+                <div class="underline"></div>
             </center>
                  <div class="container">
                         <div class="row">
