--- a/personalweb.html
+++ b/personalweb.html
@@ -112,7 +112,7 @@
                     </p>
                     <br/>
                     <p>
-                        I'm interested in software engineering and web development, and I'm open to learning new technologies.
+                        I'm interested in full stack development and software engineering, and I'm open to learning new technologies.
                     </p>
                     <br/>
                     <p>
