--- a/personalweb.html
+++ b/personalweb.html
@@ -179,10 +179,10 @@
         <br/>
         <center>
             <figure class="figure">
-                <img src="images/stockpredictor.png" id='stockpredictor' width="800px" class="figure-img p-0 m-0" alt="Stock Predictor">
+                <img src="images/financialdashboard.png" id='financialdashboard' width="800px" class="figure-img p-0 m-0" alt="Financial Dashboard">
                 <figcaption class="figure-caption p-5 text-white">
-                    <h4>Stock Trend Predictor</h4>
-                    A stock trend predictor for deciding whether or not to buy a stock
+                    <h4>Financial Dashboard</h4>
+                    A financial dashboard holding the latest economic data and also a stock trend predictor!
                     <br/>
                     <br/>
                     <br/>
